// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdminSidebar should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          key="1"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Reporting"
              id="admin.sidebar.reporting"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Server Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          key="2"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="User Management"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          key="3"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Environment"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="11"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="12"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="13"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="15"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          key="4"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Site Configuration"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          key="5"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Authentication"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Signup"
                id="admin.sidebar.signup"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="gitlab"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GitLab"
                id="admin.sidebar.gitlab"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          key="6"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Integrations"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="4"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.integrationsFeatures"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="custompluginplugin_0"
            name="plugins/custom/plugin_0"
            parentLink=""
            subsection={false}
            title="Plugin 0"
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          key="8"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Experimental"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, not render the plugin in the sidebar because does not have settings 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          key="1"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Reporting"
              id="admin.sidebar.reporting"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Server Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          key="2"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="User Management"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          key="3"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Environment"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="11"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="12"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="13"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="15"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          key="4"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Site Configuration"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          key="5"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Authentication"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Signup"
                id="admin.sidebar.signup"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="gitlab"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GitLab"
                id="admin.sidebar.gitlab"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          key="6"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Integrations"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="4"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.integrationsFeatures"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          key="8"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Experimental"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (with all feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-info"
          key="0"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="About"
              id="admin.sidebar.about"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="license"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Edition and License"
                id="admin.sidebar.license"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          key="1"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Reporting"
              id="admin.sidebar.reporting"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Server Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          key="2"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="User Management"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="groups"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Groups"
                id="admin.sidebar.groups"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="permissions/schemes"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Permissions"
                id="admin.sidebar.permissions"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          key="3"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Environment"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="elasticsearch"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Elasticsearch"
                id="admin.sidebar.elasticsearch"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="cluster"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="High Availability"
                id="admin.sidebar.cluster"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="11"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="12"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="13"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="14"
            name="metrics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Performance Monitoring"
                id="admin.sidebar.metrics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="15"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          key="4"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Site Configuration"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="announcement"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Announcement Banner"
                id="admin.sidebar.announcement"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          key="5"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Authentication"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Signup"
                id="admin.sidebar.signup"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="authentication/ldap"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="AD/LDAP"
                id="admin.sidebar.ldap"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="saml"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="SAML 2.0"
                id="admin.sidebar.saml"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="oauth"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="OAuth 2.0"
                id="admin.sidebar.oauth"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          key="6"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Integrations"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="4"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.integrationsFeatures"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-list"
          key="7"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Compliance"
              id="admin.sidebar.compliance"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="compliance/data_retention"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Data Retention Policy"
                id="admin.sidebar.dataRetentionPolicy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="compliance/export"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Export (Beta)"
                id="admin.sidebar.complianceExport"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="compliance/settings"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Settings"
                id="admin.sidebar.compliance"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="compliance/monitoring"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Monitoring"
                id="admin.sidebar.complianceMonitoring"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="compliance/custom_terms_of_service"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Custom Terms of Service (Beta)"
                id="admin.sidebar.customTermsOfService"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          key="8"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Experimental"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (without any explicit feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-info"
          key="0"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="About"
              id="admin.sidebar.about"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="license"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Edition and License"
                id="admin.sidebar.license"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          key="1"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Reporting"
              id="admin.sidebar.reporting"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Server Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          key="2"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="User Management"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="permissions/system-scheme"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="System Scheme"
                id="admin.sidebar.systemScheme"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          key="3"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Environment"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="11"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="12"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="13"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="15"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          key="4"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Site Configuration"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="announcement"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Announcement Banner"
                id="admin.sidebar.announcement"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="8"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="9"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          key="5"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Authentication"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Signup"
                id="admin.sidebar.signup"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="4"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="10"
            name="oauth"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="OAuth 2.0"
                id="admin.sidebar.oauth"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          key="6"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Integrations"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="4"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.integrationsFeatures"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="5"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="6"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="7"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-list"
          key="7"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Compliance"
              id="admin.sidebar.compliance"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="6"
            name="compliance/monitoring"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Monitoring"
                id="admin.sidebar.complianceMonitoring"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          key="8"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="Experimental"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="3"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;
